tests/syntax/bad/testfile-keyword-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void m() { fora (i = 0; 1; i++); }
